Fixed forms scaling on small screens

--- a/public/css/user/shoppingList.css
+++ b/public/css/user/shoppingList.css
@@ -50,3 +50,7 @@
 .search:focus {
     outline: none;
 }
+
+.custom-select-width {
+    width: 150px !important;
+}
